Version 2.02.99 - 
===================================
  Add writemostly/writebehind support for RAID1
  Add lv_change_activate() for common activation code in vg/lvchange.
  Revert change that allowed identical table reload for RAID.
  New lvchange arg, '--syncaction' allows scrubbing of RAID LVs.
  Improve RAID kernel status retrieval to include sync_action/mismatch_cnt.
  Add external origin support for lvcreate.
  Improve lvcreate, lvconvert and lvm man pages.
  Clean up format1 PV write to remove a need for an orphan VG for it to pass.
  Fix vgextend to not allow a PV with 0 MDAs to be used while already in a VG.
  Move update_pool_params() from /tools to /lib for better reuse.
  Give precedence to EMC power2 devices with duplicate PVIDs.
  Add --validate option to lvm dumpconfig to validate current config on demand.
  Add --ignoreadvanced and --ignoreunsupported switch to lvm dumpconfig.
  Add --withcomments and --withversions switch to lvm dumpconfig.
  Add --type {current|default|missing|new} and --atversion to lvm dumpconfig.
  Support automatic config validation and add 'config' section to lvm.conf.
  Add pvs -o ea_start,ea_size to report embedding area start and size.
  Add --embeddingareasize to pvcreate and vgconvert to create an embedding area.
  Add PV header extension: extension version, flags and embedding areas.
  Initial support for lvconvert of thin external origin.
  Add _lv_remove_segs_using_this_lv() for removal of dependent lvs.
  Improve activation code for better support of stacked devices.
  Add _add_layer_target_to_dtree() for adding linear layer into dtree.
  Extend _cached_info() to accept layer string.
  Allow identical table reload for RAID to restore transiently failed PVs.
  vgimport '--force' now allows users to import VGs with missing PVs.
  Fix PV alignment to incorporate alignment offset if the PV has zero MDAs.
  Allow remove/replace of RAID sub-LVs that are composed of error targets.